# rusty

src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
